fixed image overflowing

--- a/Frontend/CardsCss/Portada.css
+++ b/Frontend/CardsCss/Portada.css
@@ -35,6 +35,7 @@
 }
 .cardContent{
     display: flex;
+    position: relative;
     align-items: center;
     width: 100%;
     height: 100%;
